# forexpipeline

./: .env.example  .gitignore  EPIC5_ARCHITECTURE_ANALYSIS.md  baseline-capability-gap-assessment-ClaudeBackTester-2026-03-13.md  hardware-optimization-playbook.md  pytest.ini
src/python/: main.py  pyproject.toml
src/python/analysis/: __init__.py  anomaly_detector.py  evidence_pack.py  metrics_builder.py  models.py  narrative.py
src/python/confidence/: __init__.py  anomaly_layer.py  config.py  evidence_builder.py  executor.py  gates.py  models.py  narrative_engine.py  orchestrator.py  scorer.py  visualization.py
src/python/config_loader/: __init__.py  hasher.py  loader.py  validator.py
src/python/cost_model/: __init__.py  __main__.py  builder.py  schema.py  sessions.py  storage.py
src/python/data_pipeline/: __init__.py  arrow_converter.py  cli.py  converter_cli.py  data_manifest.py  data_splitter.py  dataset_hasher.py  downloader.py  parquet_archiver.py  pipeline_proof.py  quality_checker.py  schema_loader.py  session_labeler.py  timeframe_converter.py  validator_cli.py
src/python/logging_setup/: __init__.py  setup.py
src/python/optimization/: __init__.py  batch_dispatch.py  branch_manager.py  checkpoint.py  executor.py  fold_manager.py  orchestrator.py  param_classifier.py  parameter_space.py  portfolio.py  prescreener.py  results.py  signal_cache.py
src/python/orchestrator/: __init__.py  errors.py  gate_manager.py  operator_actions.py  pipeline_state.py  recovery.py  signal_precompute.py  stage_runner.py
src/python/rust_bridge/: __init__.py  backtest_executor.py  batch_runner.py  error_parser.py  output_verifier.py  result_executor.py  result_ingester.py  result_processor.py  worker_client.py
(+555 files in other folders)
